tests/testdata/ipynb.err
  File "./ipynb.py", line 47
    'outputs': []
            ^
SyntaxError: invalid syntax
